# EchoType

./: README.md  cli_client.py  client.py  config.yaml  config_manager.py  gui_client.py  logger.py  main.py  pyproject.toml  simple_client.py  test_popup_window.py  tests.py
Client/: __init__.py  audio_recorder.py  cli_client.py  client.py  hotkey_manager.py
Client/AudioRecorder/: __init__.py  audio_data.py  audio_recorder.py  recording_state.py
Client/HotkeyManager/: __init__.py  hotkey_action.py  hotkey_manager.py  hotkey_mode.py  hotkey_state.py
GUIClient/: __init__.py  gui_client.py  popup_window.py  settings_window.py  tray_app.py  utility.py
GUIClient/Style/: popup_window.qss
GUIClient/TrayApp/: __init__.py  tray_app.py  tray_status.py
GUIClient/Widgets/: __init__.py  audio_visualiser.py  hotkey_edit.py  timer_label.py
GUIClient/Windows/: __init__.py  popup_window.py  settings_window.py
STTServer/: __init__.py  stt_server.py
Tests/: stt_app_test.py
Utility/: __init__.py  config_manager.py  logger.py
VoiceClient/: voice_client.py
plans/: architecture-and-roadmap.md  bugs.md
