[project]
name = "echotype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "pyqt6>=6.10.2",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "uvicorn>=0.40.0",
]
